--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,55 @@
 </html>
 
 <style>
-	body::-webkit-scrollbar {
-		display: none;
+	@font-face {
+		font-family: "Comfortaa";
+		src: url('/fonts/Comfortaa-Regular.ttf');
 	}
+/* Red Light scheme (Default) */
+/* Can be forced with data-theme="light" */
+[data-theme="light"],
+:root:not([data-theme="dark"]) {
+  --primary: #e53935;
+  --primary-hover: #d32f2f;
+  --primary-focus: rgba(229, 57, 53, 0.125);
+  --primary-inverse: #FFF;
+}
+
+/* Red Dark scheme (Auto) */
+/* Automatically enabled if user has Dark mode enabled */
+@media only screen and (prefers-color-scheme: dark) {
+  :root:not([data-theme]) {
+    --primary: #e53935;
+    --primary-hover: #f44336;
+    --primary-focus: rgba(229, 57, 53, 0.25);
+    --primary-inverse: #FFF;
+  }
+}
+
+/* Red Dark scheme (Forced) */
+/* Enabled if forced with data-theme="dark" */
+[data-theme="dark"] {
+  --primary: #e53935;
+  --primary-hover: #f44336;
+  --primary-focus: rgba(229, 57, 53, 0.25);
+  --primary-inverse: #FFF;
+}
+
+/* Red (Common styles) */
+:root {
+  --form-element-active-border-color: var(--primary);
+  --form-element-focus-color: var(--primary-focus);
+  --switch-color: var(--primary-inverse);
+  --switch-checked-background-color: var(--primary);
+}
+
+::-webkit-scrollbar {
+	background: var(--card-background-color);
+	border-radius: 0% 10% 10% 0%;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #d32f2f;
+	border-radius: 10px;
+}
 </style>
