fillin out more fields, need to change the way it submits

--- a/src/app.html
+++ b/src/app.html
@@ -15,7 +15,7 @@
 <style>
 	@font-face {
 		font-family: "Comfortaa";
-		src: url('/fonts/Comfortaa-Regular.ttf');
+		src: url('/fonts/Comfortaa-Light.ttf');
 	}
 /* Red Light scheme (Default) */
 /* Can be forced with data-theme="light" */
