--- a/src/app.html
+++ b/src/app.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width; height=device-height" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div style="display: contents; background: none;">%sveltekit.body%</div>
 	</body>
 </html>
 
@@ -24,7 +24,8 @@
   --primary-hover: #1D7564;
   --primary-focus: #166749;
   --primary-inverse: #093B44;
-  --background-color: #0F2739;
+  /* --background-color: #0F2739; */
+  --background-color: none;
 }
 
 /* Red Dark scheme (Auto) */
@@ -35,7 +36,8 @@
 	--primary-hover: #1D7564;
 	--primary-focus: #166749;
 	--primary-inverse: #093B44;
-	--background-color: #0F2739;
+  --background-color: none;
+	/* --background-color: #0F2739; */
   }
 }
 
@@ -46,7 +48,8 @@
 	--primary-hover: #1D7564;
 	--primary-focus: #166749;
 	--primary-inverse: #093B44;
-	--background-color: #0F2739;
+  --background-color: none;
+	/* --background-color: #0F2739; */
 }
 
 /* Red (Common styles) */
@@ -66,4 +69,7 @@
 	background: var(--primary-hover);
 	border-radius: 10px;
 }
+
+::-webkit
+
 </style>
